fixed spacing around a.perma

--- a/perma_web/static/css/style-responsive.scss
+++ b/perma_web/static/css/style-responsive.scss
@@ -895,7 +895,7 @@ a.perma, p a.perma {
 	color: $color-blue;
 	white-space: nowrap;
 	font-size: 12px;
-	padding: 4px 4px 4px 2px;
+	padding: 4px;
 	border: 2px solid $color-blue;
 	vertical-align: middle;
 	border-radius: 2px;
